--- a/ui/narrative/methods/view_tree/display.yaml
+++ b/ui/narrative/methods/view_tree/display.yaml
@@ -4,7 +4,7 @@
 name: View Tree - v1.2.1
 
 tooltip: |
-    View a Species Tree or Gene Tree
+    Allows users to view a SpeciesTree object.
 
 screenshots: []
 
@@ -33,17 +33,18 @@ parameters :
         ui-name : |
             Tree
         short-hint : |
-            The Tree to view
+            The SpeciesTree object to view.
     desc :
         ui-name : |
             Description
         short-hint : |
-            A Description of the Tree
+            A description of the SpeciesTree which will be added to the title in the tree image.
 
 description : |
-    <p>View a Species Tree or Gene Tree as an image and download images and NEWICK representations.</p>
+    <p>Currently KBase supports the creation of gene and Species Trees. This App displays the selected tree as a static image and provides links to download the image in PNG and PDF formats.  It also provides links to download file containing the NEWICK representation of the tree (with identifiers or labels). There is also button (‘View report in separate window’) and a link to open a new web page with just the image of the tree.</p>
 
-    <p><i>View Tree</i> App written by Dylan Chivian (DCChivian@lbl.gov)</p>
+    <p><strong>Team members who developed &amp; deployed algorithm in KBase:</strong> Dylan Chivian. For questions, please <a href=”http://kbase.us/contact-us/”>contact us</a>.</p>
+
 
 publications :
     -
